test/classes/lydia/inherit-from-not-visible.good
inherit-from-not-visible.chpl:8: error: Unable to find super class named 'Foo'
